[gd_scene load_steps=4 format=3 uid="uid://5u7mtlbqv4dg"]

[ext_resource type="Script" path="res://systems/save_system/GUI/save_menu.gd" id="1_c4y5q"]
[ext_resource type="PackedScene" uid="uid://l7jr0kxb6rqm" path="res://systems/save_system/GUI/NewSave.tscn" id="2_3ltuu"]
[ext_resource type="PackedScene" uid="uid://dknegxl7i6pto" path="res://systems/Game_Menu/Confirm.tscn" id="3_g21pi"]

[node name="SaveMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -349.0
offset_bottom = -378.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c4y5q")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -103.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel"]
layout_mode = 2
offset_right = 411.0
offset_bottom = 88.0

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer2"]
modulate = Color(0.501407, 0.501406, 0.501406, 1)
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 29
text = "Сохранения
"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer2"]
modulate = Color(0.501407, 0.501406, 0.501406, 1)
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
offset_left = 10.0
offset_top = 85.0
offset_right = 404.0
offset_bottom = 375.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="SaveListH" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SavelistV" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/ScrollContainer/SaveListH"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NewSaveButton" type="Button" parent="Panel"]
process_mode = 3
layout_mode = 0
offset_left = 421.0
offset_top = 305.0
offset_right = 685.0
offset_bottom = 338.0
text = "Создать"

[node name="Delete" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 421.0
offset_top = 344.0
offset_right = 548.0
offset_bottom = 375.0
disabled = true
text = "Удалить"

[node name="Load" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 421.0
offset_top = 271.0
offset_right = 685.0
offset_bottom = 302.0
disabled = true
text = "Загрузить"

[node name="Cancel" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 561.0
offset_top = 344.0
offset_right = 686.0
offset_bottom = 375.0
text = "Отмена"

[node name="Line2D8" type="Control" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Line2D" type="Line2D" parent="Panel/Line2D8"]
position = Vector2(413.667, 4.76721)
scale = Vector2(1.16667, 1.25574)
points = PackedVector2Array(-1, 0, -1, 299)
width = 3.0
default_color = Color(0.322431, 0.350525, 0.355207, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 11.51

[node name="Line2D2" type="Line2D" parent="Panel/Line2D8"]
position = Vector2(2.48407, 382)
scale = Vector2(1.16254, 1.00328)
points = PackedVector2Array(-0.857146, 0.996735, 598.286, 0.996735)
width = 3.0
default_color = Color(0.322431, 0.350525, 0.355207, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 11.51

[node name="Line2D3" type="Line2D" parent="Panel/Line2D8"]
position = Vector2(2.48407, 382.031)
scale = Vector2(1.16254, 0.992939)
points = PackedVector2Array(-0.416391, 0, -0.416391, -382.755)
width = 3.0
default_color = Color(0.322431, 0.350525, 0.355207, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 11.51

[node name="Line2D4" type="Line2D" parent="Panel/Line2D8"]
position = Vector2(2.48407, 382.031)
scale = Vector2(1.16254, 0.992939)
points = PackedVector2Array(-0.416391, -382.734, 597.415, -382.734)
width = 3.0
default_color = Color(0.322431, 0.350525, 0.355207, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 11.51

[node name="Line2D5" type="Line2D" parent="Panel/Line2D8"]
position = Vector2(4, 382)
scale = Vector2(1.16254, 0.992939)
points = PackedVector2Array(597.415, -382.734, 597.415, -0.0312195)
width = 3.0
default_color = Color(0.322431, 0.350525, 0.355207, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 11.51

[node name="Line2D6" type="Line2D" parent="Panel/Line2D8"]
position = Vector2(4, 337)
scale = Vector2(1.16254, 0.992939)
points = PackedVector2Array(351.817, -69.4907, 596.971, -69.4907)
width = 3.0
default_color = Color(0.322431, 0.350525, 0.355207, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 11.51

[node name="Line2D7" type="Line2D" parent="Panel/Line2D8"]
position = Vector2(4, 216)
scale = Vector2(1.16254, 0.992939)
points = PackedVector2Array(351.817, -69.4907, 596.971, -69.4907)
width = 3.0
default_color = Color(0.322431, 0.350525, 0.355207, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 11.51

[node name="SaveInfo" type="Control" parent="Panel"]
anchors_preset = 0
offset_left = 416.0
offset_top = 5.0
offset_right = 695.0
offset_bottom = 265.0

[node name="SaveImage" type="TextureRect" parent="Panel/SaveInfo"]
layout_mode = 0
offset_left = -2.0
offset_top = -1.0
offset_right = 281.0
offset_bottom = 141.0
expand_mode = 2
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="Panel/SaveInfo"]
layout_mode = 2
offset_left = -2.0
offset_top = 144.0
offset_right = 281.0
offset_bottom = 261.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainerLabel" type="VBoxContainer" parent="Panel/SaveInfo/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Panel/SaveInfo/MarginContainer/VBoxContainerLabel"]
visible = false
layout_mode = 2
text = "Задание:"

[node name="Label2" type="Label" parent="Panel/SaveInfo/MarginContainer/VBoxContainerLabel"]
visible = false
layout_mode = 2
text = "Шота там"

[node name="NewSave" parent="." instance=ExtResource("2_3ltuu")]
visible = false
layout_mode = 1
offset_left = 121.0
offset_top = 103.0
offset_right = -216.0
offset_bottom = -31.0

[node name="Confirm" parent="." instance=ExtResource("3_g21pi")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 114.0
offset_top = 106.0
offset_right = 624.0
offset_bottom = 264.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="Panel/NewSaveButton" to="." method="_on_new_save_button_pressed"]
[connection signal="pressed" from="Panel/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Panel/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Panel/Cancel" to="." method="_on_cancel_pressed"]
